# schweinehund_bot

./: .gitignore  LICENSE  README.md  config.json  data.json  example_data.json  main.py  mock_data.json  pyproject.toml  setup.cfg
lib/: Strings.py
models/: Activity.py  Data.py  Group.py  HabitEntry.py  TelegramUser.py  User.py  UserProgressData.py
models/data_storage/: Data.py
services/: FileServices.py  MessageServices.py  json_service.py
testing/: Mocking.py
