[metadata]
name=schweinehund_telegram_bot
version=0.0.1
author=Paul and Tim van den Berg
author_email=tim.vandenberg@stud.uni-goettingen.de
description=an habbit tracking telegram bot for our friends
long_description=file:README.md
long_description_content_type = text/markdown
url = https://github.com/van-den-Berg/schweinehund_bot
project_urls =
    Bug Tracker = https://github.com/van-den-Berg/schweinehund_bot/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
#    = src #we should probably have a src dir so the main.py is not chilling within all the other files.
packages = find:
python_requires = >=3.7

[options.extras_require]


#[options.packages.find]
#where = src
